removing double link

--- a/_publications/2017-05-15-V351-Pup.md
+++ b/_publications/2017-05-15-V351-Pup.md
@@ -1,11 +1,12 @@
 ---
 title: "A Radio Emission Analysis of Classical Nova V351 Pup (1991)"
 collection: publications
-# permalink: /publication/2017-05-15-V351-Pup
+permalink: /publication/2017-05-15-V351-Pup
 excerpt: 'Previously, Nova Puppis 1991 (V351 Pup) was measured to host one of the most massive ejections claimed in the literature. Multi-frequency radio detections from one epoch were published for this nova in the 1990s; and yet, the remaining data collected by the Karl G. Jansky Very Large Array (VLA) have remained unpublished. In this paper, we analyze the remaining unpublished data sets for V351 Pup at frequencies of 4.9, 8.4, 14.9, and 22.5 GHz. We fit the resulting light curve to a model of expanding thermal ejecta, under the assumption that the radio emission is dominated by free–free radiation and accounting for high levels of clumping in the ejecta. Images of V351 Pup in both the radio (from the VLA) and H alpha +[N ii] (from Hubble Space Telescope) exhibit no aspherical structure, strengthening our assumption of spherical symmetry. From expansion parallax methods, we estimate the distance to V351 Pup to be 5.0 +/- 1.5 kpc. Our light-curve fit yields a value of log10(Mej) = -5.2 +/- 0.7 solar masses for the ejecta mass, implying that V351 Pup is on the low end of expectations for ejecta mass from classical novae. A comparison between our derived ejecta mass and theoretical models gives evidence for a very massive (1.25 solar masses) white dwarf, which is consistent with spectroscopic evidence for an oxygen–neon white dwarf.'
 date: 2017-05-15
 venue: 'The Astrophysical Journal'
 paperurl: 'https://iopscience.iop.org/article/10.3847/1538-4357/aa6fab'
 ---
 
+Previously, Nova Puppis 1991 (V351 Pup) was measured to host one of the most massive ejections claimed in the literature. Multi-frequency radio detections from one epoch were published for this nova in the 1990s; and yet, the remaining data collected by the Karl G. Jansky Very Large Array (VLA) have remained unpublished. In this paper, we analyze the remaining unpublished data sets for V351 Pup at frequencies of 4.9, 8.4, 14.9, and 22.5 GHz. We fit the resulting light curve to a model of expanding thermal ejecta, under the assumption that the radio emission is dominated by free–free radiation and accounting for high levels of clumping in the ejecta. Images of V351 Pup in both the radio (from the VLA) and H alpha +[N ii] (from Hubble Space Telescope) exhibit no aspherical structure, strengthening our assumption of spherical symmetry. From expansion parallax methods, we estimate the distance to V351 Pup to be 5.0 +/- 1.5 kpc. Our light-curve fit yields a value of log10(Mej) = -5.2 +/- 0.7 solar masses for the ejecta mass, implying that V351 Pup is on the low end of expectations for ejecta mass from classical novae. A comparison between our derived ejecta mass and theoretical models gives evidence for a very massive (1.25 solar masses) white dwarf, which is consistent with spectroscopic evidence for an oxygen–neon white dwarf.
 
